# InkjetPlumber

./: .gitignore  .gitmodules  CMakeLists.txt  InkjetPlumber.plist  InkjetPlumber.pro  InkjetPlumber.qrc  README.md  aboutdialog.cpp  aboutdialog.ui  autoupdater.h  main.cpp  maintenancejob.cpp  maintenancejob.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  sparkleautoupdater.h  sparkleautoupdater.mm  version.h
cmake/: FindSparkle.cmake
resources/files/: LaunchAgent.plist
src/: InkjetPlumber.icns  InkjetPlumber.plist  InkjetPlumber.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autoupdater.h  cocoainitializer.mm  main.cpp  maintenancejob.cpp  maintenancejob.h  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  sparkleautoupdater.h  sparkleautoupdater.mm  src.pro  version.h
